# ml-ops

./: .gitignore  README.md  pyproject.toml
data-managment/: README.md  dataset.dvc  docker-compose.yml  export-yolo.sh
data-managment/.dvc/: config
model-inference/: README.md
model-inference/ray-deploy/: object_detection.py  run_serve.py
model-inference/test-deploy/: test.py
model-monitoring/: README.md  docker-compose.yaml
model-monitoring/evidently/: clickhouse_client.py  config.py  create_reference_dataset.py  drift_analyzer.py  evidently_client.py
model-monitoring/monitoring/: otel_collector.py
model-monitoring/monitoring/grafana/dashboards/: system-monitoring.json  yolo-monitoring-clickhouse.json
model-monitoring/monitoring/otel/: otel-collector-config.yml
model-monitoring/monitoring/prometheus/: prometheus.yml
model-monitoring/test/: client.py  test.py
model-monitoring/yolo/: Dockerfile  app.py  client.py
model-training/: README.md  setup_cluster.sh  troubleshoot.sh
model-training/docker/: build-and-push-local.sh
model-training/k8s/: coredns-config.yaml  coredns-custom.yaml  dns-network-policy.yaml
model-training/kind/: kind-config.yaml
model-training/model-cpu/: config.yaml  ray_job.py  submit_job.py
model-training/monitoring/prometheus/: prometheus-values.yaml
model-training/ray-cluster/: ray-cluster-values.yaml
